<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_page_edit_mode"
        android:visible="false">
        <item
            android:id="@+id/action_add_box"
            android:icon="@drawable/ic_edit_add"
            android:title="@string/add_box"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_disable_edit_mode"
            android:icon="@drawable/ic_check"
            android:title="@string/finish_editing"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group_page_detail"
        android:visible="true">
        <item
            android:id="@+id/action_enable_edit_mode"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit_page"
            android:iconTint="@color/menuIconEdit"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_delete_page"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete_page"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_share_page"
            android:icon="@drawable/ic_share"
            android:title="@string/share_page"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_process_page"
            android:icon="@drawable/ic_upload"
            android:title="@string/process_page"
            app:showAsAction="ifRoom" />
    </group>
</menu>