<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_list_edit_mode"
        android:visible="true">
        <item
            android:id="@+id/action_select_all"
            android:checkable="true"
            android:icon="@drawable/ic_checkbox_unchecked"
            android:title="@string/toggle_select_all"
            android:iconTint="@color/menuIcon"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_delete_books"
            android:icon="@drawable/ic_confirm_delete"
            android:title="@string/delete_selected_books"
            android:iconTint="@color/menuIconDelete"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_disable_edit_mode"
            android:icon="@drawable/ic_close"
            android:title="@string/close_edition"
            android:iconTint="@color/menuIcon"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group_books_list"
        android:visible="true">
        <item
            android:id="@+id/action_enable_edit_mode"
            android:icon="@drawable/ic_list_edit_mode"
            android:title="@string/edit_books_list"
            android:iconTint="@color/menuIcon"
            app:showAsAction="ifRoom" />
    </group>
</menu>